--- a/GuildBrowser/GuildBrowser-Info.plist
+++ b/GuildBrowser/GuildBrowser-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>B2ERBJHJZ7.de.oopdev.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>de.oopdev.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
